--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "axios": "^1.2.6",
+    "canvas-confetti": "^1.6.0",
     "eslint-config-next": "13.1.6",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "@types/canvas-confetti": "^1.6.0"
   }
 }
